--- a/src/pages/[localeId]/preview.astro
+++ b/src/pages/[localeId]/preview.astro
@@ -5,7 +5,7 @@ import { INPUT } from '@config/input.ts';
 import { LOCALE } from '@config/locale.ts';
 import { SITE } from '@config/site.ts';
 import { type ThemeId, THEME } from '@config/theme.ts';
-import { getLocale, getLocaleStrings } from '@i18n/index.ts';
+import { getLocale, getLocaleMessages } from '@i18n/index.ts';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { Link } from '@lucide/astro';
 import { keysOf } from '@utils/index.ts';
@@ -27,9 +27,15 @@ function getIframePath(themeId: ThemeId) {
 	return `${basePath}?${THEME.id}=${themeId}&${INPUT.id}=${msg.input.placeholder}`;
 }
 
-const themeIds: ThemeId[] = ['light', 'dark', 'teal'];
+const themeIds: ThemeId[] = ['light', 'dark', 'teal'] as const;
+// Hardcoded because these strings don't need to be translated (this page is not indexed)
+const pageMsg = {
+	title: 'Social preview',
+	description: `Social preview page for ${SITE.title}.`,
+} as const;
+
 const currentLocaleId = getLocale(Astro);
-const msg = getLocaleStrings(currentLocaleId);
+const msg = getLocaleMessages(currentLocaleId);
 const label = new URL(SITE.url.base).host;
 const basePath = getRelativeLocaleUrl(currentLocaleId);
 
@@ -43,7 +49,7 @@ export function getStaticPaths() {
 }
 ---
 
-<BaseLayout>
+<BaseLayout {...pageMsg}>
 	<meta slot="head" name="robots" content="noindex,nofollow" />
 	<main>
 		<header>
