refactor: don't nest standalone alerts within articles

--- a/src/components/app/Loader.astro
+++ b/src/components/app/Loader.astro
@@ -30,6 +30,7 @@ type Props = WithChildren<true>;
 		--duration: 3s;
 
 		position: relative;
+		margin: 0;
 		filter: var(--s-drop-md);
 		animation: bounce var(--duration) linear infinite;
 	}
