--- a/src/pages/[localeId]/index.astro
+++ b/src/pages/[localeId]/index.astro
@@ -4,7 +4,10 @@ import Header from '@components/app/Header.astro';
 import CounterInput from '@components/app/home/CounterInput.astro';
 import CounterOutputs from '@components/app/home/CounterOutputs.astro';
 import Nav from '@components/app/home/Nav.astro';
+import Alert from '@components/ui/Alert.astro';
 import Article from '@components/ui/Article.astro';
+import Main from '@components/ui/Main.astro';
+import MarkdocContent from '@components/ui/MarkdocContent.astro';
 import { INPUT } from '@config/input.ts';
 import { LOCALE } from '@config/locale.ts';
 import { getLocale, getLocaleMessages } from '@i18n/index.ts';
@@ -77,16 +80,22 @@ export function getStaticPaths() {
 
 <PageLayout description={msg.longDescription}>
 	<Header />
-	<main>
+	<Main>
 		<section>
 			<CounterInput />
 			<CounterOutputs />
 			<Nav />
-			{alertEntry && <Article entry={alertEntry} />}
+			{
+				alertEntry && (
+					<Alert>
+						<MarkdocContent entry={alertEntry} />
+					</Alert>
+				)
+			}
 		</section>
 		<Article entry={aboutEntry} />
 		<Article entry={relatedEntry} />
-	</main>
+	</Main>
 	<Footer />
 	<!-- Preload the input text as soon as possible to prevent FOUC -->
 	<script is:inline async type="module" define:vars={inputPreloadVars}>
@@ -99,26 +108,18 @@ export function getStaticPaths() {
 
 <style>
 	main {
-		display: flex;
-		flex-direction: column;
 		gap: var(--p-lg);
-		flex: 1;
-		width: 100%;
-		max-width: var(--max-w);
-		padding: var(--p-md);
-		box-sizing: border-box;
-		view-transition-name: main;
+
+		> section {
+			display: flex;
+			flex-direction: column;
+			gap: var(--p-md);
+			view-transition-name: counter-section;
+		}
 
 		> article {
 			padding: 0 var(--p-md);
 		}
-	}
-
-	section {
-		display: flex;
-		flex-direction: column;
-		gap: var(--p-md);
-		view-transition-name: counter-section;
 	}
 </style>
 
