--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,7 @@
 import ButtonLink from '@components/ui/ButtonLink.astro';
 import Card from '@components/ui/Card.astro';
 import H1 from '@components/ui/H1.astro';
+import Main from '@components/ui/Main.astro';
 import PageLayout from '@layouts/PageLayout.astro';
 import { House } from '@lucide/astro';
 
@@ -20,7 +21,7 @@ const msg = {
 
 <PageLayout title={msg.title} description={msg.description}>
 	<meta slot="head" name="robots" content="noindex" />
-	<main>
+	<Main>
 		<H1>{msg.title}</H1>
 		<p>{msg.description}</p>
 		<Card as="nav">
@@ -31,19 +32,16 @@ const msg = {
 				tooltip={msg.nav.home.tooltip}
 			/>
 		</Card>
-	</main>
+	</Main>
 </PageLayout>
 
 <style>
 	main {
-		display: flex;
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		gap: var(--p-md);
-		flex: 1;
-		width: 100%;
-		height: 100%;
-		view-transition-name: main;
+	}
+
+	p {
+		margin: 0;
 	}
 </style>
