perf: remove hue interpolation mode from CSS gradients as it is implied

--- a/src/components/app/Loader.astro
+++ b/src/components/app/Loader.astro
@@ -22,7 +22,7 @@ type Props = WithChildren<true>;
 <style>
 	figure {
 		--blue: var(--p);
-		--blue-dark: color-mix(in oklch shorter hue, var(--p), #000 var(--mix-md));
+		--blue-dark: color-mix(in oklch, var(--p), #000 var(--mix-md));
 		--key: #fff;
 		--paper: #eef0fd;
 		--text: #00000049;
