fix: experimental locale alert type

--- a/src/pages/[localeId]/index.astro
+++ b/src/pages/[localeId]/index.astro
@@ -97,7 +97,7 @@ export function getStaticPaths() {
 			</noscript>
 			{
 				experimentalLocaleAlertEntry && (
-					<Alert type="error">
+					<Alert>
 						<MarkdocContent entry={experimentalLocaleAlertEntry} />
 					</Alert>
 				)
