--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -53,6 +53,7 @@
 	--s-mix: var(--l-s-mix);
 }
 
+/* OG dusk theme */
 [data-theme='dusk'] {
 	--bg-1: oklch(15% 0.018 270);
 	--bg-2: oklch(22% 0.04 330);
@@ -62,6 +63,7 @@
 	--s-mix: 100%;
 }
 
+/* OG teal theme */
 [data-theme='teal'] {
 	--bg-1: oklch(52% 0.07 190);
 	--bg-2: oklch(58% 0.07 185);
@@ -80,12 +82,12 @@
 	--e: oklch(70.4% 0.191 22.216);
 	--s-mix: 0%;
 
-	textarea {
+	textarea, form, nav {
 		border: var(--b-md) solid var(--p);
 	}
 }
 
-/* Colors from OKSolar (https://meat.io/oksolar) */
+/* Colors from OKSolar (https://meat.io/oksolar) (CC0) */
 [data-theme='solarizedDark'] {
 	--bg-1: oklch(27.4% 0.05 219.6); /* base03 */
 	--bg-2: oklch(32.1% 0.053 219.6); /* base02 */
@@ -95,7 +97,7 @@
 	--s-mix: 100%;
 }
 
-/* Colors from OKSolar (https://meat.io/oksolar) */
+/* Colors from OKSolar (https://meat.io/oksolar) (CC0) */
 [data-theme='solarizedLight'] {
 	--bg-1: oklch(93.06% 0.026 92.4); /* base2 */
 	--bg-2: oklch(97.35% 0.026 90.1); /* base3 */
@@ -105,62 +107,62 @@
 	--s-mix: var(--l-s-mix);
 }
 
+/* Colors from https://github.com/morhetz/gruvbox (MIT) */
 [data-theme='gruvboxDark'] {
-	--bg-1: oklch(21% 0 0);
-	--bg-2: oklch(26% 0.01 45);
-	--fg: oklch(85% 0.08 90);
-	--p: oklch(62% 0.2 75);
-	/* TODO: Add custom error color */
-	--l-e: oklch(50.5% 0.213 27.518); /* Red 700 */
+	--bg-1: #282828; /* dark0 */
+	--bg-2: #3c3836; /* dark1 */
+	--fg: #ebdbb2; /* light1 */
+	--p: #fe8019; /* bright_orange */
+	--e: #fb4934; /* bright_red */
 	--s-mix: 100%;
 }
 
+/* Colors from https://github.com/morhetz/gruvbox (MIT) */
 [data-theme='gruvboxLight'] {
-	--bg-1: oklch(85% 0.08 90);
-	--bg-2: oklch(95% 0.06 90);
-	--fg: oklch(26% 0.01 45);
-	--p: oklch(62% 0.2 75);
-	/* TODO: Add custom error color */
-	--e: oklch(70.4% 0.191 22.216); /* Red 400 */
+	--bg-1: #ebdbb2; /* light1 */
+	--bg-2: #fbf1c7; /* light0 */
+	--fg: #3c3836; /* dark1 */
+	--p: #af3a03; /* faded_orange */
+	--e: #9d0006; /* faded_red */
 	--s-mix: var(--l-s-mix);
 }
 
+/* Colors from https://catppuccin.com/palette/#flavor-mocha (MIT) */
 [data-theme='catppuccinMocha'] {
-	--bg-1: oklch(20% 0.02 270);
-	--bg-2: oklch(28% 0.03 270);
-	--fg: oklch(90% 0.06 270);
-	--p: oklch(75% 0.18 270);
-	/* TODO: Add custom error color */
-	--l-e: oklch(50.5% 0.213 27.518); /* Red 700 */
+	--bg-1: #11111b; /* Crust */
+	--bg-2: #181825; /* Mantle */
+	--fg: #cdd6f4; /* Text */
+	--p: #89b4fa; /* Blue */
+	--e: #f38ba8; /* Red */
 	--s-mix: 100%;
 }
 
+/* Colors from https://catppuccin.com/palette/#flavor-latte (MIT) */
 [data-theme='catppuccinLatte'] {
-	--bg-1: oklch(92% 0.01 250);
-	--bg-2: oklch(96% 0.01 250);
-	--fg: oklch(30% 0.02 260);
-	--p: oklch(68% 0.18 275);
-	/* TODO: Add custom error color */
-	--l-e: oklch(50.5% 0.213 27.518); /* Red 700 */
+	--bg-1: #dce0e8; /* Crust */
+	--bg-2: #e6e9ef; /* Mantle */
+	--fg: #4c4f69; /* Text */
+	--p: #7287fd; /* Lavender */
+	--e: #d20f39; /* Red */
 	--s-mix: var(--l-s-mix);
 }
 
+/* Colors from https://draculatheme.com/spec#color-palette (MIT) */
 [data-theme='dracula'] {
-	--bg-1: oklch(24% 0.03 270);
-	--bg-2: oklch(36% 0.03 270);
-	--fg: oklch(98% 0.01 100);
-	--p: oklch(70% 0.2 300);
-	/* TODO: Add custom error color */
-	--e: oklch(70.4% 0.191 22.216); /* Red 400 */
+	--bg-1: #191A21; /* Background Darker */
+	--bg-2: #21222C; /* Background Dark */
+	--fg: #F8F8F2; /* Foreground */
+	--p: #BD93F9; /* Purple */
+	--e: #FF5555; /* Red */
 	--s-mix: 100%;
 }
 
+/* Colors from https://www.nordtheme.com/docs/colors-and-palettes (MIT) */
 [data-theme='nord'] {
-	--bg-1: oklch(25% 0.03 250);
-	--bg-2: oklch(30% 0.03 250);
-	--fg: oklch(88% 0.03 250);
-	--p: oklch(65% 0.18 250);
-	/* TODO: Add custom error color */
-	--l-e: oklch(50.5% 0.213 27.518); /* Red 700 */
+	--bg-1: #2e3440; /* nord0 */
+	--bg-2: #3b4252; /* nord1 */
+	--fg: #eceff4; /* nord6 */
+	--p: #88c0d0; /* nord8 */
+	--e: #bf616a; /* nord11 */
 	--s-mix: 100%;
 }
