feat: disable subpixel aliasing on social preview page

--- a/src/pages/[localeId]/preview.astro
+++ b/src/pages/[localeId]/preview.astro
@@ -88,6 +88,8 @@ export function getStaticPaths() {
 		width: 100%;
 		overflow: hidden;
 		font-size: calc(0.9vw + 0.9vh);
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
 		background-image: radial-gradient(
 			farthest-corner circle at 50% 100% in oklch,
 			var(--bg-3),
