feat: use Bdo component in LocaleSelector and ar/about.mdoc to fix text direction of emojis

--- a/src/components/app/LocaleSelector.astro
+++ b/src/components/app/LocaleSelector.astro
@@ -32,7 +32,7 @@ const msg = getLocaleMessages(currentLocaleId).locales;
 						{id}
 					/>
 					{flag}
-					{languageName}
+					<bdo dir={rtl ? 'rtl' : 'ltr'}>{languageName}</bdo>
 					{regionName && `(${regionName})`}
 					{wip && ' 🚧'}
 				</Label>
